--- a/Pagina de pruebas.html
+++ b/Pagina de pruebas.html
@@ -21,13 +21,32 @@
     </center>
         <!-- Este es un comentario -->
 <br>
-    <hr>
+        <p><a href="Historia%20de%20HTML_Hernandez%20Armando.html"><center><b><big>Historia de HTML</big></b></center></a></p>
+        <hr>
     <center>
-        <marquee direction="up" width="250" height="200" behavior="alternate" style="border:solid", bgcolor="#ECFFEC">
+        <marquee direction="up" width="350" height="200" behavior="alternate" style="border:solid", bgcolor="#ECFFEC" scrollamount=”1%″>
             <center>
-                <p>Este es un parrafo</p>
-                <p><i>Esto es en cursiva</i></p>
-                <p><b>Esto es en negritas</b></p>
+                <h1>Atributos de texto</h1>
+                <ul type="square">
+                    <li><p>Este es un parrafo</p></li>
+                    <li><em>Esto es texto con enfasis</em></li>
+                    <li><i>Esto es texto en cursivas</i></li>
+                    <li><pre>Esto es texto preformateado</pre></li>
+                    <li><s>Esto es texto tachado</s></li>
+                    <li><small>Esto es texto pequeño</small></li>
+                    <li><b>Esto es texto en negritas</b></li>
+                    <li><strong>Este es texto en negritas too</strong></li>
+                    <li><u>Esto es texto subrayado</u></li>
+                    <li><sub>Esto es texto formato subindice</sub></li>
+                    <li><sup>Esto es texto formato superindice</sup></li>
+                    <li><code>Esto es texto de codigo</code></li>
+                    <li><font color="blue">Esto es texto azul</font></li>
+                    <li><font color="#FF0000">Esto es texto azul</font></li>
+                    <li><font size="20px">Esto es tamaño 20</font></li>
+                    <li><font style="normal">Esto es estilo normal</font></li>
+                    <li><font face="comic sans ms">Esto es fuente de texto</font></li>
+                </ul>
+<br>
 <br>
             </center>
         </marquee>
@@ -42,6 +61,36 @@
             <dd>Es el acronimo de Cascading Style Sheets</dd>   
             <dt><b>BROWSER</b></dt>
             <dd>Is in an aplication program that provides a way to look at adn interact with all the information on the World Wide Web</dd>
+<br>
+        <hr>
+         <body>
+            <center><h1>DATOS DE ALUMNO</h1></center>
+<center><table border="1px" style="width:100%" bgcolor="#FFFFFF">
+<tr bgcolor="#974747">
+    <th>Generales</th>
+    <th>Etiqueta</th>
+    <th>Funcion</th>
+    <th>Atributos</th>
+</tr>
+    <tr>
+        <th rowspan="14">Atributos globales</th>
+        <td>&lt;html&gt;</td>
+        <td>Es la base para poder poner las demas etiquetas. Nos dice que va a estar dentro de nuestra pagina</td>
+        <td></td>
+    </tr>
+<tr>
+    <td>&lt;header&gt;</td>
+    <td>Dentro de esta etiqueta va el titulo que aparecera en la pestaña del navegador al abrir la pagina</td>
+    <td><a href="ATRIBUTOS%20GLOBALES.html">Atributos globales</a></td>
+    </tr>
+    <tr>
+        <td>&lt;stronge&gt; y &lt;b&gt;</td>
+    <td>Ambas permiten poner en negritas el texto dentro de ellas</td>
+    <td></td>
+    </tr>
+</table>
+            </center>
+</body>
 <br>
         <hr>
         <h2><font color="#FFFFFF">Generos de peliculas</font></h2>
@@ -112,5 +161,20 @@
                 <li>Marilyn Manson</li>   
             </ul>
      </ul>   
+        <hr>
+        <center><h1><font color="#FFFFFF">UNIVERSIDAD TECNOLOGICA DE CIUDAD JUAREZ</font></h1></center>
+        <br>
+        <br>
+        <br>
+        <center><img src="Imagen%20paisaje%20uni.jpg"width="45%" height="70%" alt="Imagen tomanda en la universidad tecnologica de ciudad juarez el dia 26/09/2003, en la parte posterior del edificio J." frameborder="8" ></center>
+        <br>
+       <center><iframe width="560" height="315" src="https://www.youtube.com/embed/faqmNf_fZlE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+        <br>
+        <br>
+        <br>
+        <br>
+        <audio controls autoplay loop>
+            <source src="AudioHXH.mp3">
+        </audio>
     </body>
 </html>
